--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,5 @@ services:
         ports:
           - "80:80"
           - "443:443"
-        command: --acme-domain rancher.brosy.dev
+        command: --acme-domain $domain
     
