--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
           - "443:443"
         volumes:
           - rancher-data:/var/lib/rancher
-        command: --acme-domain ${DOMAIN}
+        command: --privileged --acme-domain ${DOMAIN}
     
 volumes:
     rancher-data:
