--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,9 @@ services:
           - "443:443"
         volumes:
           - rancher-data:/var/lib/rancher
-        command: --privileged --acme-domain ${DOMAIN}
+        command: 
+          - --privileged
+          - --acme-domain ${DOMAIN}
     
 volumes:
     rancher-data:
